<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presets">


    <SeekBar
        android:id="@+id/styrka1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="264dp"
        android:max="100"
        android:min="1"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@+id/ofhour"
        tools:layout_editor_absoluteX="-15dp" />

    <SeekBar
        android:id="@+id/styrka2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="96dp"
        android:max="100"
        android:min="1"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@+id/onhour"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/onhour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timme"
        android:inputType="text"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="129dp" />

    <EditText
        android:id="@+id/ofhour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timme"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="395dp" />

    <EditText
        android:id="@+id/offmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/minut"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/onhour"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/onhour"
        app:layout_constraintTop_toBottomOf="@+id/onhour" />

    <EditText
        android:id="@+id/onmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/minut"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/ofhour"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/alarm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_gg_till_alarm"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="580dp" />

    <Button
        android:id="@+id/Alarm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/l_gg_till_alarm_"
        app:layout_constraintTop_toBottomOf="@+id/offmin"
        tools:layout_editor_absoluteX="121dp" />
</androidx.constraintlayout.widget.ConstraintLayout>